--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,20 +6,20 @@ on:
       - master
 
 jobs:
-  # test:
-  #   runs-on: ubuntu-latest
+  test:
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: install deps
-  #       run: |
-  #         yarn install
-  #     - name: run cypress
-  #       uses: cypress-io/github-action@v2
-  #       with:
-  #         start: yarn dev
-  #         wait-on: http://localhost:3000
-  #         command: yarn lerna run e2e
+    steps:
+      - uses: actions/checkout@v2
+      - name: install deps
+        run: |
+          yarn install
+      - name: run cypress
+        uses: cypress-io/github-action@v2
+        with:
+          start: yarn dev
+          wait-on: http://localhost:3000
+          command: yarn cy:run
 
   deploy:
     # needs: [test]
