--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:debug": "REACT_APP_DEBUG_MODE=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run --browser chrome"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -38,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cypress": "^5.0.0"
   }
 }
