--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,7 +17,7 @@ jobs:
       - name: run cypress
         uses: cypress-io/github-action@v2
         with:
-          start: yarn dev
+          start: yarn start
           wait-on: http://localhost:3000
 
   deploy:
