--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/styled-components": "^5.1.1",
+    "@xstate/react": "^1.3.1",
     "framer-motion": "^3.10.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-scripts": "^4.0.3",
     "styled-components": "^5.1.1",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "xstate": "^4.16.2"
   },
   "scripts": {
     "start": "react-scripts start",
