--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/styled-components": "^5.1.1",
     "@xstate/react": "^1.3.1",
+    "date-fns": "^2.23.0",
     "framer-motion": "^3.10.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
