--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@xstate/react": "^1.3.1",
     "date-fns": "^2.23.0",
     "framer-motion": "^3.10.0",
+    "polished": "^4.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^4.2.0",
