--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/styled-components": "^5.1.1",
     "@xstate/react": "^1.3.1",
+    "canvas-confetti": "^1.4.0",
     "date-fns": "^2.23.0",
     "framer-motion": "^3.10.0",
     "polished": "^4.1.3",
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.4.2",
     "cypress": "^5.0.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
