--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@chakra-ui/react": "^1.3.4",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
+    "@sentry/react": "^6.14.3",
+    "@sentry/tracing": "^6.14.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
